--- a/Random_Roll/MainWindow.xaml
+++ b/Random_Roll/MainWindow.xaml
@@ -8,7 +8,7 @@
         ui:WindowHelper.UseModernWindowStyle="True"
         ui:WindowHelper.SystemBackdropType="Mica"
         mc:Ignorable="d"
-        Title="随机点名器" Height="450" Width="800"
+        Title="随机点名器" Height="450" Width="800" MinHeight="365" MinWidth="650"
         Loaded="Window_Loaded">
     <ui:NavigationView x:Name="NavigationView_Root" IsPaneOpen="False" PaneDisplayMode="Auto" SelectionChanged="NavigationView_SelectionChanged">
         <ui:NavigationView.MenuItems>
