--- a/Random_Roll/Pages/About.xaml
+++ b/Random_Roll/Pages/About.xaml
@@ -9,7 +9,7 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <ui:ScrollViewerEx>
+        <ui:ScrollViewerEx HorizontalScrollBarVisibility="Auto">
             <ikw:SimpleStackPanel Margin="24">
                 <Label Content="关于" FontSize="24" Margin="8" FontWeight="Bold"/>
                 <ikw:SimpleStackPanel Margin="8">
