--- a/Random_Roll/Pages/SettingsPages/Management.xaml
+++ b/Random_Roll/Pages/SettingsPages/Management.xaml
@@ -12,8 +12,8 @@
     <Grid>
         <ui:ScrollViewerEx HorizontalScrollBarVisibility="Auto">
             <ikw:SimpleStackPanel Margin="24">
-                <ui:ListView x:Name="Names" SelectionMode="Extended"/>
-                <TextBox x:Name="NewPerson_Name" AcceptsReturn="true" Visibility="Collapsed"/>
+                <ui:ListView x:Name="Names" SelectionMode="Extended" PreviewMouseWheel="UI_PreviewMouseWheel"/>
+                <TextBox x:Name="NewPerson_Name" AcceptsReturn="true" Visibility="Collapsed" PreviewMouseWheel="UI_PreviewMouseWheel"/>
                 <ikw:SimpleStackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                     <Button x:Name="NewPerson_Cancel_Button" Margin="8" Click="NewPerson_Cancel_Button_Click" Visibility="Collapsed">
                         <ui:IconAndText Icon="{x:Static ui:SegoeFluentIcons.Cancel}" Content="取消"/>
