--- a/Random_Roll/Pages/Home.xaml
+++ b/Random_Roll/Pages/Home.xaml
@@ -13,7 +13,9 @@
         <ui:ScrollViewerEx Margin="0,0,0,64">
             <ikw:SimpleStackPanel Margin="16">
                 <TextBlock x:Name="Statistic" Text="请单击" FontSize="24" FontWeight="SemiBold"/>
-                <TextBlock x:Name="NameBlock" Text="“开始抽选”" FontSize="36" FontWeight="Bold" TextWrapping="Wrap"/>
+                <WrapPanel x:Name="NamePanel">
+                    <TextBlock x:Name="Tip" Text="“开始抽选”" FontSize="36" FontWeight="Bold"/>
+                </WrapPanel>
             </ikw:SimpleStackPanel>
         </ui:ScrollViewerEx>
         <ui:NumberBox x:Name="Count" Value="1" Minimum="1" SmallChange="1" LargeChange="5" Margin="16" SpinButtonPlacementMode="Inline" ValidationMode="InvalidInputOverwritten" ValueChanged="Count_ValueChanged" HorizontalAlignment="Left" VerticalAlignment="Bottom"/>
