--- a/Random_Roll/Pages/Home.xaml
+++ b/Random_Roll/Pages/Home.xaml
@@ -6,6 +6,7 @@
       xmlns:ui="http://schemas.inkore.net/lib/ui/wpf/modern"
       xmlns:ikw="http://schemas.inkore.net/lib/ui/wpf"
       xmlns:local="clr-namespace:Random_Roll.Pages"
+      xmlns:rdr="clr-namespace:Random_Roll.Controls"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Loaded="Page_Loaded">
